Added about section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,29 @@
         </div>
 
     </header>
+    <section id="about">
+        <div id="my-image">
+            <img src="./assets/profilePic.jpg" alt="Udyan">
+        </div>
+        <div id="about-text">
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta molestiae, vel magni sed aspernatur atque pariatur tenetur ducimus iure ipsam. Illo necessitatibus error maxime, ab atque illum neque tempore ipsa!
+            </p>
+        </div>
+    </section>
+
+    <section id="skill">
+        <div class="section-name">
+
+        </div>
+        <div class="section-group">
+
+        </div>
+    </section>
+    <section id="portfolio">
+        
+    </section>
+
 
 </body>
 </html>
