Added basic layout to Resume with css

--- a/index.html
+++ b/index.html
@@ -1,46 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <title>Resume | Udyan Ojha</title>
+
     <script  src="https://kit.fontawesome.com/b3348ae33f.js"
       crossorigin="anonymous"
   ></script>
-    <title>Resume | Udyan Ojha</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
     <header id="body-header">
         <nav>
-            <ul class="horizontal-list text-center nav-bar">
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+
+            <ul class="horizontal-list text-center nav-menu">
+                <li>
+                    <a href="#"> Home </a>
+                </li>
+                <li>
+                    <a href="#about"> About </a>
+                </li>
+                <li>
+                    <a href="#skills"> Skills </a>
+                </li>
+                <li>
+                    <a href="#experience">Experience</a>
+                </li>
+                <li>
+                    <a href="#education">Education</a>
+                </li>
+                <li>
+                    <a href="#portfolio">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
             </ul>
+
         </nav>
+
         <div id="name-social-container">
-            <div id="name" class="text-center"><h1>Udyan Ojha</h1></div>
-            <div id="socials" class="horizontal-list">
+            <div class="text-center">
+                <h1 id="my-name">
+                    Udyan Ojha
+                </h1>
+            </div>
+            <div>
                 <ul class="horizontal-list text-center social-icons">
                     <li>
-                        <a href="#">
+                        <a href="https://www.linkedin.com/in/udyanojha/">
                             <i class="fa-brands fa-linkedin"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <i class="fa-brands fa-stack-overflow"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa-brands fa-google-plus-g"></i>
+                        <a href="https://github.com/udyanojhatwitter">
+                            <i class="fa-brands fa-github"></i>
                         </a>
                     </li>
                     <li>
@@ -49,38 +64,176 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <i class="fa-brands fa-quora"></i>
+                        <a href="https://twitter.com/udyanojha">
+                            <i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
                 </ul>
+
             </div>
+
         </div>
 
     </header>
-    <section id="about">
-        <div id="my-image">
-            <img src="./assets/profilePic.jpg" alt="Udyan">
-        </div>
-        <div id="about-text">
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta molestiae, vel magni sed aspernatur atque pariatur tenetur ducimus iure ipsam. Illo necessitatibus error maxime, ab atque illum neque tempore ipsa!
-            </p>
-        </div>
-    </section>
+    <main>
 
-    <section id="skill">
-        <div class="section-name">
+        <section id="about">
+            <div id="my-image">
+                <img src="./assets/profilePic.jpg" alt="Udyan">
+            </div>
 
-        </div>
-        <div class="section-group">
+            <div id="about-para">
 
-        </div>
-    </section>
-    <section id="portfolio">
-        
-    </section>
+                <p>
+                    Love to play video games and beliefs in never back down mentality and learning from mistakes to conquer each level at a time.
+                    I like to perform tasks in a team and am motivated, persistent, and fun to work with new people.
+                    Applying gamer instincts to my projects and always becomes fun to do.
+                </p>
 
+            </div>
+
+        </section>
+
+
+
+        <section id="skills">
+            <h1 class="section-heading mb75px ">
+                <span>
+                    <i class="fas fa-chalkboard-teacher"></i>
+                </span>
+                <span> SKILLS </span>
+            </h1>
+
+            <div class="skills-display">
+
+                <div class="skill-progress">
+                    <div class="sixty-percent mb-blue">
+                        <div class="skill-name">
+                            <span> JavaScript </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="eighty-five-percent mb-orange">
+                        <div class="skill-name">
+                            <span> Java </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-light-purple">
+                        <div class="skill-name">
+                            <span> CSS </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-teal">
+                        <div class="skill-name">
+                            <span> HTML </span>
+                        </div>      
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-blue">
+                        <div class="skill-name">
+                            <span> R </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-light-purple">
+                        <div class="skill-name">
+                            <span> Python </span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section id="experience">
+
+        </section>
+
+        <section id="education">
+
+        </section>
+
+        <section id="portfolio">
+            <h1 class="section-heading mb75px">
+                <span>
+                    <i class="fas fa-th-list"></i>
+                </span>
+                <span> Portfolio </span>
+            </h1>
+
+            <div id="portfolio-container">
+
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+
+        <section id="contact">
+
+        </section>
+
+    </main>
 
 </body>
 </html>
