--- a/index.html
+++ b/index.html
@@ -230,7 +230,73 @@
         </section>
 
         <section id="contact">
-
+            <h1 class="section-heading mb75px">
+                <span>
+                    <i class="fa-regular fa-address-card"></i>
+                </span>
+                <span> Contact </span>
+            </h1>
+            <div id="contact-container">
+                <div id="contact-detail">
+                    <div id="contact-form">
+                        <form action="post">
+                            <input type="text" id="name" name="name" value="Your Name" required>
+                            <input type="email" id="email" name="email" value="user@example.com" required>
+                            <textarea type="text" id="message" name="message" value="Message"></textarea>
+                            <button type="submit">SEND MESSAGE</button>
+                        </form>
+                    </div>
+                    <div id="contact-details">
+                        <div>
+                            <h6>Get in touch</h6>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, deleniti omnis laudantium veniam asperiores iusto excepturi officia alias dolore dolor nemo voluptas rerum amet blanditiis! Possimus repellat labore est ad.
+                        </p>
+                        </div>
+                        <div>
+                            <h6>Reach me out at</h6>
+                        <div class="contact-info">
+                            <span><i class="fa-solid fa-location-dot"></i></span>
+                            <span>Delhi, India</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class="fa-solid fa-phone"></i></span>
+                            <span>+91-8076062906</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class="fa-regular fa-envelope"></i></span>
+                            <span>udyanojha@gmail.com</span>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <ul class="horizontal-list text-center social-icons">
+                        <li>
+                            <a href="https://www.linkedin.com/in/udyanojha/">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/udyanojhatwitter">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/udyanojha">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                        </li>
+                    </ul>
+    
+                </div>
+                
+            </div>
         </section>
 
     </main>
