Contact structure with basic layout Done

--- a/index.html
+++ b/index.html
@@ -230,20 +230,20 @@
         </section>
 
         <section id="contact">
-            <h1 class="section-heading mb75px">
+            <h1 class="section-heading mb50px">
                 <span>
                     <i class="fa-regular fa-address-card"></i>
                 </span>
                 <span> Contact </span>
             </h1>
             <div id="contact-container">
-                <div id="contact-detail">
+                <div id="form-detail">
                     <div id="contact-form">
                         <form action="post">
-                            <input type="text" id="name" name="name" value="Your Name" required>
-                            <input type="email" id="email" name="email" value="user@example.com" required>
-                            <textarea type="text" id="message" name="message" value="Message"></textarea>
-                            <button type="submit">SEND MESSAGE</button>
+                            <input type="text" id="name" name="name" placeholder="Your Name" required>
+                            <input type="email" id="email" name="email" placeholder="user@example.com" required>
+                            <textarea type="text" id="message" name="message" placeholder="Message"></textarea>
+                            <button class="sub-btn" type="submit">SEND MESSAGE</button>
                         </form>
                     </div>
                     <div id="contact-details">
@@ -254,17 +254,17 @@
                         </p>
                         </div>
                         <div>
-                            <h6>Reach me out at</h6>
+                            <!-- <h6>Reach out to me at</h6> -->
                         <div class="contact-info">
-                            <span><i class="fa-solid fa-location-dot"></i></span>
+                            <i class="fa-solid fa-location-dot"></i>
                             <span>Delhi, India</span>
                         </div>
                         <div class="contact-info">
-                            <span><i class="fa-solid fa-phone"></i></span>
+                            <i class="fa-solid fa-phone"></i>
                             <span>+91-8076062906</span>
                         </div>
                         <div class="contact-info">
-                            <span><i class="fa-regular fa-envelope"></i></span>
+                            <i class="fa-regular fa-envelope"></i>
                             <span>udyanojha@gmail.com</span>
                         </div>
                         </div>
