added smooth scroll css

--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
                     <a href="#"> Home </a>
                 </li>
                 <li>
-                    <a href="#about"> About </a>
+                    <a href="#about" id="nav-about"> About </a>
                 </li>
                 <li>
-                    <a href="#skills"> Skills </a>
+                    <a href="#skills" id="nav-skills"> Skills </a>
                 </li>
                 <li>
-                    <a href="#experience">Experience</a>
+                    <a href="#experience" id="nav-exp">Experience</a>
                 </li>
                 <li>
-                    <a href="#education">Education</a>
+                    <a href="#education" id="nav-edu">Education</a>
                 </li>
                 <li>
-                    <a href="#portfolio">Portfolio</a>
+                    <a href="#portfolio" id="nav-portfolio">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a href="#contact" id="nav-contact">Contact</a>
                 </li>
             </ul>
 
@@ -474,6 +474,8 @@
         </section>
 
     </main>
+    <script src="main.js">
 
+    </script>
 </body>
 </html>
